tambah proyek react

--- a/style/style.css
+++ b/style/style.css
@@ -814,7 +814,8 @@ section {
 .content-1,
 .content-2,
 .content-3,
-.content-4 {
+.content-4,
+.content-7 {
     display: block;
     position: relative;
 }
@@ -822,7 +823,8 @@ section {
 .content-1 img,
 .content-2 img,
 .content-3 img,
-.content-4 img {
+.content-4 img,
+.content-7 img {
     max-height: 60%;
     width: 100%;
 }
@@ -830,7 +832,8 @@ section {
 .content-1 h6,
 .content-2 h6,
 .content-3 h6,
-.content-4 h6 {
+.content-4 h6,
+.content-7 h6 {
     color: grey;
     font-size: 0.8rem;
     text-align: center;
@@ -840,7 +843,8 @@ section {
 .content-1 h5,
 .content-2 h5,
 .content-3 h5,
-.content-4 h5 {
+.content-4 h5,
+.content-7 h5 {
     color: var(--warna-5);
     font-size: 1rem;
     text-align: center;
@@ -854,7 +858,8 @@ section {
 .content-1 h2,
 .content-2 h2,
 .content-3 h2,
-.content-4 h2 {
+.content-4 h2,
+.content-7 h2 {
     color: var(--warna-5);
     font-size: 1.2rem;
     text-align: start;
@@ -865,13 +870,18 @@ section {
 .content-1 p,
 .content-2 p,
 .content-3 p,
-.content-4 p {
+.content-4 p,
+.content-7 p {
     color: var(--warna-5);
     font-size: 1rem;
     text-align: start;
     margin: 5px 5px;
     line-height: 30px;
+}
 
+.content-7 p span#revou{
+    color: var(--warna-3);
+    font-size: 1.2rem;
 }
 
 .content-5,
